# IndieStudio

./: .gitignore  CMakeLists.txt  about.md  readme.md
Assets/Models/: bombermanout.iqm
Assets/Models/Bomberman/: Bomb (2).dae  Bomb (2).fbx  Bomb.dae  Bomb.fbx  Bomberman R.blend  Bomberman R.blend1  Bomberman.FBX  Bomberman.dae  Bomberman.gltf  Bomberman.gltf.glb  Bomberman.mtl  Switch.dae  Switch.fbx
Assets/Models/Explosion/: Explosionout.iqm
Assets/Models/Floor/: floor.blend  floor.blend1  floorUnit.glb  floorUnit.gltf  floorUnit.iqm
Assets/Models/Items/: map_ob000_item_20_jewel.dae  map_ob000_item_20_jewel.fbx  map_ob000_item_21_goalkey.dae  map_ob000_item_21_goalkey.fbx
Assets/Models/StoneCube/: StoneCube.blend  StoneCube.blend1  StoneCube.glb
Assets/Models/bomb/: Bomb.blend  Bombout.iqm
Assets/Models/cus/: Bomberman.dae  Bomberman.fbx  Readme.txt  player.blend  player.gltf
Assets/Models/cus/Regular Bomb/: Regular Bomb (Low Poly).fbx
Assets/Models/powerups/: AllPowerups.blend  BombUp.blend  BombUp.glb  BombUp.gltf  FireUp.blend  FireUp.glb  FireUp.gltf  FullFire.blend  FullFire.glb  FullFire.gltf  Skate.blend  Skate.glb  Skate.gltf  SoftBlockThrough.blend  SoftBlockThrough.glb  SoftBlockThrough.gltf
Assets/Models/steve/: steve.blend  steve.blend1  steve.glb  steve.gltf  steve.mtl
Assets/Models/steve/walk/: 10.glb  11.glb  12.glb  13.glb  14.glb  15.glb  16.glb  17.glb  18.glb  19.glb  2.glb  21.glb  22.glb  23.glb  24.glb  25.glb  26.glb  27.glb  29.glb  3.glb  30.glb  31.glb  32.glb  33.glb  34.glb  35.glb  36.glb  37.glb  38.glb  39.glb  4.glb  40.glb  5.glb  6.glb  7.glb  8.glb  9.glb
Assets/Models/walk/frames/: 1.glb  10.glb  (+24 more)
Include/: BaseValues.h  Bomberman.hpp  Colors.h  EiaInputModule.hpp  GameSave.cpp  GameSave.hpp  GameSaveLoad.cpp  GameSaveLoad.hpp  Keys.h  SaveData.h  Scene.hpp
Include/Components/: AssetLoader.hpp  BasicCubeComp.cpp  BasicCubeComp.hpp  BombComp.hpp  ButtonComp.cpp  ButtonComp.hpp  Components.h  GameLogicComp.hpp  MapComponent.hpp  MovementComp.cpp  MovementComp.hpp  Player.hpp  PositionComponent.cpp  PositionComponent.hpp  Sprite2D.cpp  Sprite2D.hpp  TransformComp.cpp  TransformComp.hpp
Include/Components/3D/: AnimatedModel.hpp  BasicCubeComp.hpp  FramesModel.cpp  FramesModel.hpp  MeshCubeComp.hpp  ModelComp.cpp  ModelComp.hpp  TransformComp.hpp
Include/Components/Character/: MovementComp.hpp  Player.hpp  PlayerComp.hpp  powerup.hpp
Include/Components/GUI/: AnimatedSprite.hpp  AnimatedSprite2D.hpp  BackgroundComponent.hpp  ButtonComp.hpp  GameOverComp.hpp  ListSelectorComp.hpp  LobbyComp.hpp  MainMenuComponent.hpp  OptionComp.hpp  PauseMenuComp.cpp  PauseMenuComp.hpp  PlayerHUD.hpp  ResizableTextComp.hpp  Sprite2D.hpp  StatusInfoComp.hpp  TextComp.hpp  listSelectorComp.hpp
Include/Components/Logic/: BombComp.hpp  GameLogicComp.hpp  MapComponent.hpp  PowerUpComp.cpp  PowerUpComp.hpp  SoundEffectComp.hpp
Include/ECS/: Component.cpp  Component.hpp  Ecs.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  Scene.hpp
Include/raygui_encap/: Button.cpp  Button.hpp
Include/raylib/: ERect.cpp  ESprite.cpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  Window.cpp  Window.hpp
Include/raylib_encap/: AInputModule.hpp  EAnimatedModel.hpp  EAudio.hpp  ECamera.cpp  ECamera.hpp  ECube.cpp  ECube.hpp  EGamepadInputModule.hpp  EKeyboardInputModule.cpp  EKeyboardInputModule.hpp  EMeshCube.hpp  EModel.hpp  EMouseInputModule.cpp  EMouseInputModule.hpp  EMusic.hpp  ERect.cpp  ERect.hpp  ESound.hpp  ESprite.hpp  EText.cpp  EText.hpp  ETime.cpp  ETime.hpp  Easing.hpp  RectCollider.cpp  RectCollider.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  Window.cpp  Window.hpp
Include/raylib_encap/Input/: AInputModule.cpp  AInputModule.hpp  EGamepadInputModule.cpp  EGamepadInputModule.hpp  EKeyboardInputModule.hpp  EMouseInputModule.cpp  EMouseInputModule.hpp
Include/raylib_encap/Math/: CubeCollider.cpp  CubeCollider.hpp  Random.hpp  RectCollider.cpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp
Source/: Bomberman.cpp  GameSaveLoad.cpp  GameSaver.cpp  GameSaver.hpp  main.cpp
Source/Components/: AnimatedSprite2D.cpp  AssetLoader.cpp  BasicCubeComp.cpp  BombComp.cpp  ButtonComp.cpp  EFramesModel.cpp  EFramesModel.hpp  GameLogicComp.cpp  ListSelectorComp.cpp  LobbyComp.cpp  MeshCubeComp.cpp  ModelComp.cpp  MovementComp.cpp  OptionComp.cpp  OptionComp.hpp  Player.cpp  PowerUpComp.cpp  Sprite2D.cpp  StatusInfoComp.cpp  TextComp.cpp  TransformComp.cpp  listSelectorComp.cpp
Source/Components/3D/: AnimatedModel.cpp  AnimatedSprite.cpp  BasicCubeComp.cpp  ModelComp.cpp
Source/Components/Character/: MovementComp.cpp  Player.cpp  PlayerComp.cpp
Source/Components/GUI/: BackgroundComponent.cpp  ButtonComp.cpp  GameOverComp.cpp  ListSelectorComp.cpp  MainMenuComponent.cpp  OptionComp.cpp  PauseMenuComp.cpp  PlayerHUD.cpp  Sprite2D.cpp  TextComp.cpp
Source/Components/Logic/: BombComp.cpp  GameLogicComp.cpp  LobbyComp.cpp  MapComponent.cpp  SoundEffectComp.cpp
Source/ECS/: Component.cpp  Entity.cpp  Manager.cpp
Source/Scenes/: AboutPowerUpsScene.cpp  ControlsScene.cpp  GameOverScene.cpp  GameScene.cpp  HowToPlay.cpp  LobbyScene.cpp  MainMenuScene.cpp  MainMenuScene.hpp  MapComponent.cpp  MapComponent.hpp  OptionScene.cpp
Source/raylib_encap/: EAnimatedModel.cpp  EAnimatedModel.hpp  EAudio.cpp  ECamera.cpp  ECube.cpp  EMeshCube.cpp  EModel.cpp  EMusic.cpp  ERect.cpp  ESound.cpp  ESprite.cpp  EText.cpp  Easing.cpp  EiaInputModule.cpp  Window.cpp
Source/raylib_encap/Input/: AInputModule.cpp  EGamepadInputModule.cpp  EKeyboardInputModule.cpp  EMouseInputModule.cpp
Source/raylib_encap/Math/: BoxCollider.cpp  BoxCollider.hpp  Random.cpp  RectCollider.cpp  Vector2D.cpp  Vector3D.cpp
Sources/Components/GUI/: ResizableTextComp.cpp
lib/raygui/: CMakeLists.txt
lib/raylib/: Findraylib.cmake
rsc/Models/: bomberman.blend  bomberman.iqm  bomberman.mtl
rsc/Models/Floor/: floor.blend  floor.glb
rsc/Models/Obstacle/: Obstacle.blend  Obstacle.glb
rsc/Models/StoneCube/: StoneCube.blend  StoneCube.glb
